# researchforge

./: .dockerignore  .gitignore  DESIGN.md  Dockerfile  IMPLEMENTATION_PLAN.md  README.md  config.yaml  docker-compose.cpu.yml  docker-compose.yml  pyproject.toml
eval/datasets/: critic_test.jsonl  retrieval_test.jsonl
eval/datasets/reference_briefings/: chunking_strategies.md  llm_evaluation.md  multi_agent_systems.md  rag_fundamentals.md  vector_databases.md
scripts/: mcp_wrapper.sh  seed_corpus.py  setup_models.sh
src/researchforge/: __init__.py  __main__.py  config.py
src/researchforge/agents/: analyst.py  critic.py  gatherer.py  graph.py  ollama_client.py  planner.py  researcher.py  state.py  writer.py
src/researchforge/agents/prompts/: __init__.py  (+6 more)
src/researchforge/db/: models.py  repository.py
src/researchforge/eval/: agent_eval.py  benchmark.py  e2e_eval.py  judge.py  retrieval_eval.py  runner.py
src/researchforge/mcp_server/: server.py
src/researchforge/rag/: chunker.py  embeddings.py  feedback.py  ingest.py  parsers.py  retriever.py  store.py  web_search.py
src/researchforge/web/: app.py  events.py
tests/: conftest.py
tests/test_agents/: test_analyst.py  test_critic.py  test_gatherer.py  test_graph.py  test_ollama_client.py  test_planner.py  test_state.py  test_writer.py
tests/test_eval/: test_agent_eval.py  test_benchmark.py  test_e2e_eval.py  test_judge.py  test_retrieval_eval.py  test_runner.py
tests/test_mcp/: test_server.py
tests/test_rag/: test_chunker.py  test_feedback.py  test_ingest.py  test_parsers.py  test_parsers_extended.py  test_retriever.py  test_store.py  test_web_search.py
tests/test_web/: conftest.py  test_app.py  test_briefings.py  test_corpus.py  test_eval.py  test_events.py  test_research.py
(+14 files in other folders)
