[build-system]
requires = ["setuptools>=69.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "researchforge"
version = "0.1.0"
description = "Local-first multi-agent research analyst platform powered by Ollama"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}

dependencies = [
    # Agent orchestration
    "langgraph>=0.2.0",
    "langgraph-checkpoint-sqlite>=3.0.0",
    "langchain-ollama>=0.2.0",
    "langchain-text-splitters>=0.2.0",
    "langchain-core>=0.3.0",

    # Vector store
    "lancedb>=0.10.0",
    "pyarrow>=14.0",

    # Document parsing
    "pymupdf4llm>=0.0.10",
    "pymupdf>=1.24.0",
    "beautifulsoup4>=4.12.0",
    "mammoth>=1.6.0",

    # Web server
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "jinja2>=3.1.0",

    # MCP
    "mcp>=1.0.0",

    # Database
    "aiosqlite>=0.20.0",

    # HTTP client
    "httpx>=0.27.0",

    # Markdown rendering
    "markdown>=3.5.0",

    # Logging
    "structlog>=24.1.0",

    # Config
    "pydantic-settings>=2.2.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.3.0",
    "pytest-httpx>=0.30.0",
]
all = [
    "researchforge[dev]",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
researchforge = [
    "web/templates/**/*.html",
    "web/static/**/*",
    "agents/prompts/*.txt",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "ollama: requires running Ollama instance",
]
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
